# TradeEngine

./: Cargo.toml  readme.md
.github/workflows/: build.yaml  test.yaml
pkg/: MarketCore.d.ts  MarketCore.js  MarketCore_bg.wasm  MarketCore_bg.wasm.d.ts  README.md  package.json
src/: lib.rs  main.rs  market.rs  structs.rs  webassembly.rs
tests/: market_tests.rs  tests.rs  wasm_tests.rs
