[package]
name = "TradeEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
ordered-float = "3.6.0"
rand = "0.8.5"
wildmatch = "2.1.1"
[dependencies.uuid]
version = "1.3.1" 
features = ["v4","fast-rng","macro-diagnostics"]
